# chess_analysis_tool

./: .gitignore  Caddyfile  README.md  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml
backend/src/modules/: engine_insights.py  move_commentary.py  move_metrics.py
backend/src/routes/: v1_router.py
backend/src/routes/v1/: analysis.py
backend/src/schemas/: app_schema.py
backend/src/utils/: config.py  helper.py  types.py
chess_analyzer/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json
chess_analyzer/src/: App.vue  main.js  style.css
chess_analyzer/src/api/: api.js
chess_analyzer/src/components/: ChessBoard.vue  EngineLine.vue  MoveQuality.vue  PGNUploader.vue  ScoreChart.vue
chess_analyzer/src/router/: index.js
chess_analyzer/src/store/: game.js
chess_analyzer/src/utils/: helper.js
chess_analyzer/src/views/: AnalysisView.vue  HomeView.vue
mcp_server/: main.py  pyproject.toml
mcp_server/src/modules/: engine_insights.py  game_summary.py
