[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-lru>=2.0.5",
    "chess>=1.11.2",
    "fastapi[standard]>=0.121.0",
    "google-genai>=1.59.0",
    "orjson>=3.11.4",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
